--- a/face-scanning/src/styles/globals.css
+++ b/face-scanning/src/styles/globals.css
@@ -42,12 +42,15 @@ a {
 }
 
 @keyframes scanLine {
+
   0% {
     transform: translateY(-100%);
   }
+
   100% {
     transform: translateY(100%);
   }
+
 }
 
 @keyframes pop {
@@ -64,14 +67,16 @@ a {
   }
 }
 
+
 .click{
       background-color:rgba(255, 255, 255, 0.9);
-      border-radius:25px;
+      color: black;
+      border-radius:10px;
       padding:15px 30px;
       font-size:16px;
       font-weight:600px;
       min-width:200px;
-      min-height: 80px;
+      min-height: 50px;
       transition:0.3s ease;
 }
 
